--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "permutations.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node permutations.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.4"
   }
 }
